layout fixes for x overflow on menu open

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -12,7 +12,6 @@
 md-sidenav-layout {
   height: auto;
   flex: 0.9;
-  overflow: visible;
 }
 
 footer {
